# ocr_evaluator

./: .gitignore  Readme.md  __init__.py  azure_ocr.py  ocr_v3.py  ocr_visualize.py  old.py  opensearch.py  os.py  pyproject.toml  requirements.txt
